# Yolo-detection-for-manufacturing

./: .gitignore  README.md  dataset.yaml  pyproject.toml
data/labels/: frame_0000.txt  frame_0010.txt  frame_0020.txt  frame_0030.txt  frame_0040.txt  frame_0050.txt  frame_0060.txt  frame_0070.txt  frame_0080.txt  frame_0090.txt  frame_0100.txt  frame_0110.txt  frame_0120.txt  frame_0130.txt  frame_0140.txt  frame_0150.txt  frame_0160.txt  frame_0170.txt  frame_0180.txt  frame_0190.txt  frame_0200.txt  frame_0210.txt  frame_0220.txt  frame_0230.txt  frame_0240.txt  frame_0250.txt  frame_0260.txt  frame_0270.txt  frame_0280.txt  frame_0290.txt  frame_0300.txt  frame_0310.txt  frame_0320.txt  frame_0330.txt  frame_0340.txt  frame_0350.txt  frame_0360.txt  frame_0370.txt  frame_0380.txt  frame_0390.txt  (+15 more)
scripts/: extract_frames.py  label.py  train_local.py  train_modal.py
src/: counter.py  counter_legacy.py
